<resources>
    <string name="app_name">ScoreMania</string>
    <string name="Score_Keeper">Match Scores</string>
    <string name="Team_A">Dead Warriors</string>
    <string name="Team_B">The Devils</string>
    <string name="Score_A">0</string>
    <string name="Score_B">0</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="A_3Pointer">3</string>
    <string name="A_5Pointer">5</string>
    <string name="A_10Pointer">10</string>
    <string name="Switch">Switch To \"The Devils\"</string>
    <string name="Zero">Off</string>
    <string name="Team_A_description">Represents the Symbol for Team A</string>
    <string name="Team_B_description">Represents the Symbol for Team B</string>
    <string name="compare">v/s</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>